# compare-my-stocks

./: .gitignore  CLADUE_REPO.md  LICENSE  MANIFEST.in  Manifest.in  README.md  actondata.py  combined.spec  common.py  compare-my-stocks.iss  compare-my-stocks.spec  compare_pkg_versions.py  compareengine.py  datagenerator.py  exampleconfig.py  formobserver.py  getpositionsgraph.py  graphgateway.py  graphgenerator.py  hist_file.cache  inputprocessor.py  inputsource.py  main.py  mainwindow2.py  mainwindow2.ui  mkdocs.yml  orederedset.py  parameters.py  pyproject.toml  refvar.py  requirements.txt  run_monitor.ps1  run_tests.ps1  run_tests.py  runit.ps1  sample.ipynb  setup.py  supportwidgets.py  test_runner.py  test_runner_v2.py  (+8 more)
.github/workflows/: docs.yml
common/: common.py
compare_my_stocks/: runsit.py
compare_my_stocks/common/: common.py  orederedset.py
compare_my_stocks/config/: config.py
compare_my_stocks/data/: myconfig.py
compare_my_stocks/engine/: compareengine.py
compare_my_stocks/graph/: graphgenerator.py
compare_my_stocks/gui/: daterangeslider.py  formobserver.py  mainwindow.py  mainwindow.ui
compare_my_stocks/input/: inputdata.py  transactionhandler.py
compare_my_stocks/processing/: datagenerator.py
config/: config.py  exampleconfig.py  mygroups.json
docs/: CONFIGURATION.md  QUICKSTART.md  UI.md  index.md
engine/: compareengine.py  parameters.py  symbolsinterface.py
graph/: graphgenerator.py
gui/: daterangeslider.py  formobserver.py  mainwindow.py  mainwindow.ui
ib/: ibtest.py
input/: inputprocessor.py  inputsource.py  transactionhandler.py
install/: installdev.ps1  installvoila.bat  internal.ps1
jupyter/: sample.ipynb  supportwidgets.py
processing/: actondata.py  datagenerator.py
scripts/: convert_serialized_to_json.py  fetch_polygon_cache.py  inspect_data.py  inspect_graph.py  strip_bundled_cache.py
src/compare_my_stocks/: __init__.py  __main__.py  app.py  conftest.py  current_random.py  ibsrv.py  jupystart.py  runsit.py  scheme.py  testit.py
src/compare_my_stocks/common/: autoreloader.py  better_abc.py  common.py  composition.py  dolongprocess.py  impacketLICENSE  logger.py  loghandler.py  paramaware.py  refvar.py  serialization.py  simpleexceptioncontext.py  userprompt.py
src/compare_my_stocks/config/: __init__.py  config.py  defaultconf.toml  newconfig.py
src/compare_my_stocks/data/: HistFile.cache  example_mystock.csv  graphs.json  groups.json  hist_file.cache  myconfig.py  myconfig.schema.json  myconfig.yaml
src/compare_my_stocks/data/jupyter/: defaultnotebook.ipynb
src/compare_my_stocks/engine/: compareengine.py  compareengineinterface.py  parameters.py  symbols.py  symbolshandler.py  symbolsinterface.py
src/compare_my_stocks/graph/: graphgenerator.py  pyqtgraph_canvas.py
src/compare_my_stocks/gui/: config_gui.py  daterangeslider.py  forminitializer.py  forminitializerinterface.py  forminterface.py  formobserver.py  formobserverinterface.py  graphhandler.py  jupytercommon.py  jupyterhandler.py  listobserver.py  mainwindow.py  mainwindow.ui  stockchoice.py  voilastatus.py
src/compare_my_stocks/ib/: remoteprocess.py  timeoutreg.py
src/compare_my_stocks/input/: earningscommon.py  earningsinp.py  earningsproc.py  ibsource.py  inputdata.py  inputdatainterface.py  inputprocessor.py  inputprocessorinterface.py  inputsource.py  investpysource.py  polygon.py  transactionhandler.py
src/compare_my_stocks/jupyter/: __init__.py  jupytertools.py  plot_3d.py  supportwidgets.py
src/compare_my_stocks/processing/: actondata.py  datagenerator.py  datageneratorinterface.py
src/compare_my_stocks/tests/: conftest.py  test_call_graph_generator.py  test_common.py  test_comp.py  test_composition_extended.py  test_config_gui.py  test_currency_adjust.py  test_datagen.py  test_daterangeslider.py  test_default_notebook.py  test_earningsproc.py  test_engine.py  test_forminitializer_ranges.py  test_generic_graph.py  test_graph_handler.py  test_ib_integration.py  test_ibflex_url.py  test_ibstatement.py  test_ibstatement_integration.py  test_inputprocessor_unit.py  test_it.py  test_jupytertools.py  test_no_adjusted_for_ibstatement.py  test_parameters.py  test_serialization.py  test_simpleexception.py  test_stockprices.py  test_symbols.py  test_tries.py  testit.py  testtools.py  tries.py
src/compare_my_stocks/transactions/: IBtransactionhandler.py  earningscommon.py  earningsproc.py  ibstatementhandler.py  mystockstransactionhandler.py  parsecsv.py  stockprices.py  transactionhandler.py  transactionhandlermanager.py  transactioninterface.py
ui/: formobserver.py  mainwindow.py  mainwindow.ui
