
[tool.pytest.ini_options]
timeout=300
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s | %(filename)s:%(lineno)d:%(function)s | %(levelname)s | %(message)s"
markers = [
    "integration: requires a live network/IB/Polygon connection (skipped by default)",
]
addopts = "-m 'not integration'"

[tool.poetry]
name = "compare-my-stocks"
version = "1.2.6"
description = "A system for visualizing interesting stocks. Has powerful comparison capabilities and works seamlessly with your jupyter notebook.   Written in QT with matplotlib + pyqtgraph."
authors = ["eyalk5"]
readme = "README.md"
packages = [{include = "compare_my_stocks", from = "src"}]
include = [  "src/compare_my_stocks/data",
"src/compare_my_stocks/gui/mainwindow.ui",
"src/compare_my_stocks/common/impacketLICENSE"]
exclude = [
    "tests/not_this_dir"
]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
colorlog = "^6.7"  # 6.10.1
django = "^5.2"  # 5.2.13
numpy = [
    {version = "^1.26", python = ">=3.11,<3.13"},
    {version = "^2.1", python = ">=3.13,<3.15"},  # 2.4.4
]
"ruamel.yaml" = "^0.17.31"  # 0.17.40
pydantic = "^2.3"  # 2.13.3
dacite = "^1.8.1"  # 1.9.2

requests = {version = "^2.31", optional = true}  # 2.33.1
pyside6 = {version = "^6.7", optional = true}  # 6.11.0
matplotlib = {version = "^3.9", optional = true}  # 3.10.9
pyqtgraph = {version = "^0.13", optional = true}  # 0.14.0
pandas = [
    {version = "^2.2", python = ">=3.11,<3.13", optional = true},
    {version = "^2.3", python = ">=3.13,<3.15", optional = true},  # 2.3.3
]
python-dateutil = {version = "^2.9", optional = true}  # 2.9.0.post0
pytz = {version = "^2026.1", optional = true}  # 2026.1.post1
qtvoila = {git = "https://github.com/Tauffer-Consulting/qtvoila.git", branch = "multiprocessing-with-test", optional = true}  # 2.2.0
superqt = {version = "^0.6", optional = true}  # 0.6.7
mplcursors = {git = "https://github.com/anntzer/mplcursors.git", rev = "834703a85102dd16edfc484fc07641c36a24dbd4", optional = true}  # 0.5.2.post8+g834703a85
ib-insync = {version = "^0.9.85", optional = true}  # 0.9.86
ib-async = {version = "^2.1", optional = true}  # 2.1.0
pywin32 = {version = "^311", optional = true, markers = "sys_platform == 'win32'"}  # 311
frozendict = {version = "^2.4", optional = true}  # 2.4.7
pyro5 = {version = "^5.14", optional = true}  # 5.16
ibflex = {git = "https://github.com/eyalk11/ibflex.git", optional = true}  # 0.16
six = {version = "^1.16", optional = true}  # 1.17.0
psutil = {version = "^5.9", optional = true}  # 5.9.8
dataconf = {version = "^3.2", optional = true}  # 3.6.0
toml = {version = "^0.10", optional = true}  # 0.10.2
pytest = {version = "^8.0", optional = true}  # 8.4.2
ipykernel = {version = "^7.2", optional = true}  # 7.2.0
setuptools = {version = "^82.0", optional = true}  # 82.0.1
nbformat = {version = "^5.10", optional = true}  # 5.10.4
memoization = {version = "^0.4", optional = true}  # 0.4.0
notebook = {version = "^7.5", optional = true}  # 7.5.5
json-editor-pyside6 = {version = "^1.0.3", optional = true}  # 1.0.3
qt-collapsible-section-pyside6 = {version = "^0.1", optional = true}  # 0.1.0
jupyter-server = {version = "^2.17", optional = true}  # 2.17.0
jupyter = {version = "*", optional = true}
ipydatagrid = {version = "^1.4", optional = true}  # 1.4.0
joblib = {version = "^1.3", optional = true}  # 1.5.3
polygon-api-client = {version = "^1.14", optional = true}  # 1.16.3
multimethod = {version = "^1.12", optional = true}  # 1.12
ordered-set = {version = "^4.1", optional = true}  # 4.1.0


voila = {version = "^0.5", optional = true}  # 0.5.12
python-composition = {git = "https://github.com/eyalk11/composition.git", rev = "807a5c1", optional = true}  # 0.1.0
numerize = {version = "^0.12", optional = true}  # 0.12

[tool.poetry.extras]
full = ['requests', 'pyside6', 'matplotlib', 'pyqtgraph', 'pandas', 'python-dateutil', 'pytz', 'qtvoila', 'superqt', 'mplcursors', 'ib-insync', 'ib-async', 'pywin32', 'frozendict', 'pyro5', 'ibflex', 'six', 'psutil', 'dataconf', 'toml', 'pytest', 'ipykernel', 'setuptools', 'nbformat', 'memoization', 'notebook', 'json-editor-pyside6', 'qt-collapsible-section-pyside6', 'jupyter-server', 'ipydatagrid', 'joblib', 'polygon-api-client', 'multimethod', 'ordered-set', 'voila', 'python-composition', 'django', 'colorlog', 'numpy', 'ruamel.yaml', 'numerize']
mini = ['colorlog','django','numpy','ruamel.yaml']
jupyter = ['ipydatagrid','colorlog','django','numpy','ruamel.yaml','voila','ipykernel','pandas','voila','joblib','matplotlib','pyqtgraph','jupyter','pyro5','numerize','numpy','pytz']
full_no_ib = ['requests', 'pyside6', 'matplotlib', 'pyqtgraph', 'pandas', 'python-dateutil', 'pytz', 'qtvoila', 'superqt', 'mplcursors', 'pywin32', 'frozendict', 'pyro5', 'six', 'psutil', 'dataconf', 'toml', 'pytest', 'ipykernel', 'setuptools', 'nbformat', 'memoization', 'notebook', 'json-editor-pyside6', 'qt-collapsible-section-pyside6', 'jupyter-server', 'ipydatagrid', 'joblib', 'polygon-api-client', 'multimethod', 'ordered-set', 'voila', 'python-composition', 'django', 'colorlog', 'numpy', 'ruamel.yaml', 'numerize']
[tool.uv.extra-build-dependencies]
pandas = ["pkg_resources"]
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[mypy]
mypy_path = "src\\compare_my_stocks"
[tool.pyright]
pythonVersion= "3.14"
ignore = ["./.venv11", "./.venv314"]
